fix: theme button hidden when the sidebar collapsed.
git-svn-id: https://win-lhoa5a3q3i7/svn/front-end-backup/trunk@2352 3f25d8b1-e65f-8d48-bd54-75b34d8be7f1

--- a/src/modules/layout-module/layout-style/layout-style.scss
+++ b/src/modules/layout-module/layout-style/layout-style.scss
@@ -314,3 +314,11 @@ html {
     max-width: 100%;
   }
 }
+.clearfix {
+  clear: both;
+}
+.clearfix:after {
+  clear: both;
+  content: "";
+  display: table;
+}
